# BikeMi-unofficial-API

./: .coveragerc  .gitignore  .isort.cfg  AUTHORS.md  CONTRIBUTING.md  LICENSE.md  LICENSE.txt  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  pylint.yml
api/: api_requirements.txt  bikemi.py
docs/: conf.py  index.md
src/bikemi_unofficial_api/: __init__.py  bikemi.py
tests/: conftest.py
